w17 2022-09-05 20:06:54+03:00 - build 332

1. Avoid some arclite crash

w17 2022-09-03 00:14:10+03:00 - build 331

1. Correct 330

w17 2022-09-02 16:32:43+03:00 - build 330

1. Updating Archives does not preserve File Creation Timestamp
   https://github.com/FarGroup/FarManager/issues/496

w17 2022-08-26 14:30:39+03:00 - build 329

1. 7z.dll 22.01

drkns 2022-08-02 21:52:59+01:00 - build 328

1. UAF crash after 325.

drkns 2022-07-22 23:00:00+01:00 - build 327

1. Adapt to 7z v22 shenanigans with file times.

2. Create archive - Advanced parameters didn't work with integer values.

w17 2022-06-20 17:09:51+03:00 - build 326

1. 7z.dll 22.00

w17 2022-05-24 19:01:10+03:00 - build 325

1. 003947: ArcLite:PE fails to open files with data after executable body
   https://bugs.farmanager.com/view.php?id=3947

w17 2021-12-28 16:36:54+03:00 - build 324

1. 7z.dll 21.07

w17 2021-12-08 15:59:17+03:00 - build 323

1. workaround for 7z 21.xx zip backslash purism
   https://forum.farmanager.com/viewtopic.php?p=169196#p169196

w17 2021-11-30 18:00:17+03:00 - build 322

1. 7z.dll 21.06

w17 2021-11-11 15:00:32+03:00 - build 321

1. 7z.dll 21.04

w17 2021-09-15 18:51:03+01:00 - build 320

1. 0003896: ArcLite:PE opens as Base64.

w17 2021-07-28 15:38:31+03:00 - build 319

1. 7z.dll обновлена до версии 21.03

w17 2021-05-06 17:37:40+03:00 - build 318

1. 7z.dll обновлена до версии 21.02

w17 2020-12-29 17:07:37+03:00 - build 317

1. Не находилась 7z.dll на x86 если в Modulepath были '/'

w17 2020-12-12 02:33:14+03:00 - build 316

1. Не сбрасывался пароль создаваемого архива, несмотря на отключение шифрования, при сохраненном пароле.
   https://forum.farmanager.com/viewtopic.php?p=163225#p163225

drkns 2020-11-14 23:54:39+00:00 - build 315

1. Fix "Retry" button in error dialogs.

drkns 2020-08-17 19:45:45+01:00 - build 314

1. gh-263: Use ArcLite for .aab by default

drkns 2020-07-04 12:52:29+01:00 - build 313

1. gh-250: Use ArcLite for .apk and .aar by default
