@@ -15,7 +15,16 @@ extern const ArcType c_wim;
 extern const ArcType c_tar;
 extern const ArcType c_SWFc;
 extern const ArcType c_dmg;
+//
 extern const ArcType c_hfs;
+extern const ArcType c_fat;
+extern const ArcType c_ntfs;
+extern const ArcType c_ext4;
+extern const ArcType c_apfs;
+extern const ArcType c_mbr;
+extern const ArcType c_gpt;
+//
+extern const ArcType c_xfat;
 
 extern const wchar_t* c_method_copy;   // pseudo method
 
@@ -217,7 +226,6 @@ private:
   UInt32 error_flags, warning_flags;
   std::wstring error_text, warning_text;
   IInStream *base_stream;
-  bool open(IInStream* in_stream, const ArcType& type, const bool allow_tail = false);
   UInt64 get_physize();
   UInt64 archive_filesize();
   UInt64 get_skip_header(IInStream *stream, const ArcType& type);
@@ -239,6 +247,7 @@ public:
   }
   static std::unique_ptr<Archives> open(const OpenOptions& options);
   void close();
+  bool open(IInStream* in_stream, const ArcType& type, const bool allow_tail = false);
   void reopen();
   bool is_open() const {
     return in_arc;
@@ -273,6 +282,9 @@ public:
   unsigned get_crc(UInt32 index) const;
   bool get_anti(UInt32 index) const;
   bool get_isaltstream(UInt32 index) const;
+
+  UInt64 get_offset(UInt32 index) const;
+  //std::wstring get_filesystem(UInt32 index) const;
 
   void read_open_results();
   std::list<std::wstring> get_open_errors() const;
