@@ -1,3 +1,7 @@
+w17 2023-04-17 12:59:50+03:00 - build 333
+
+1. Open partition without copying.
+
 w17 2022-09-05 20:06:54+03:00 - build 332
 
 1. Avoid some arclite crash
